# tap-sybase-sdk

./: README.md  pyproject.toml
.github/workflows/: ci_workflow.yml
tap-sybase/: meltano.yml  tox.ini
tap-sybase/tap_sybase/: client.py
tap_sybase/: client.py  tap.py
tap_sybase/tests/: __init__.py  test_core.py
